[gd_scene load_steps=26 format=3 uid="uid://c33rba2x8q1ki"]

[ext_resource type="PackedScene" uid="uid://bu3tur2xlhsd5" path="res://Prefabs/ball.tscn" id="1_6l744"]
[ext_resource type="Script" path="res://scripts/prototype_script.gd" id="1_g2ouy"]
[ext_resource type="Script" path="res://scripts/autoload_script.gd" id="2_ka6a6"]
[ext_resource type="PackedScene" uid="uid://w7m6tehvvy3g" path="res://Prefabs/human_player.tscn" id="2_rsxgl"]
[ext_resource type="PackedScene" uid="uid://7memcylkg6sx" path="res://Prefabs/hoop.tscn" id="3_qflja"]
[ext_resource type="Texture2D" uid="uid://jaegp53ccc7w" path="res://Assets/Spritesheet/platformPack_tilesheet.png" id="3_rdf4y"]
[ext_resource type="Script" path="res://scripts/player_script.gd" id="5_evilh"]
[ext_resource type="Texture2D" uid="uid://cbss87b7xk5lc" path="res://Assets/Spritesheet/platformerPack_character.png" id="6_0in8p"]
[ext_resource type="Script" path="res://scripts/right_hoop_script.gd" id="6_0xkil"]
[ext_resource type="Texture2D" uid="uid://bf1lqavqywpdj" path="res://Assets/Spritesheet/platformerPack_character - Copy.png" id="6_3v478"]
[ext_resource type="Script" path="res://scripts/away_player_script.gd" id="6_8er2y"]
[ext_resource type="PackedScene" uid="uid://fo4g0532757u" path="res://Prefabs/score_board.tscn" id="6_q1x3o"]
[ext_resource type="Script" path="res://scripts/left_hoop_script.gd" id="7_m75r5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vx5oq"]
atlas = ExtResource("6_0in8p")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hucd2"]
atlas = ExtResource("6_0in8p")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhfjw"]
atlas = ExtResource("6_0in8p")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl2nk"]
atlas = ExtResource("6_0in8p")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_lxk46"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx5oq")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hucd2")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhfjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl2nk")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_au5pg"]
atlas = ExtResource("6_3v478")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5c6r"]
atlas = ExtResource("6_3v478")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sb8a"]
atlas = ExtResource("6_3v478")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqxl1"]
atlas = ExtResource("6_3v478")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_qcm61"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_au5pg")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5c6r")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sb8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqxl1")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gnxdt"]
texture = ExtResource("3_rdf4y")
texture_region_size = Vector2i(64, 64)
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/bottom_left_corner = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0

[sub_resource type="TileSet" id="TileSet_1p7u0"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Wall"
terrain_set_0/terrain_0/color = Color(0.72549, 0, 0.137255, 1)
sources/0 = SubResource("TileSetAtlasSource_gnxdt")

[node name="Prototype" type="Node2D"]
script = ExtResource("1_g2ouy")

[node name="Global" type="Node2D" parent="."]
script = ExtResource("2_ka6a6")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -324)
zoom = Vector2(0.75, 0.75)

[node name="Ball" parent="." instance=ExtResource("1_6l744")]
position = Vector2(0, -28)

[node name="HomePlayer" parent="." instance=ExtResource("2_rsxgl")]
position = Vector2(-223, -60)
script = ExtResource("5_evilh")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="HomePlayer" groups=["Player"]]
sprite_frames = SubResource("SpriteFrames_lxk46")
animation = &"Jump"

[node name="AwayPlayer" parent="." instance=ExtResource("2_rsxgl")]
position = Vector2(208, -63)
script = ExtResource("6_8er2y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AwayPlayer"]
sprite_frames = SubResource("SpriteFrames_qcm61")
animation = &"Idle"

[node name="RightHoop" parent="." instance=ExtResource("3_qflja")]
position = Vector2(670, -270)
scale = Vector2(1.1, 1.1)
collision_layer = 11
collision_mask = 11

[node name="Node2D" type="Node2D" parent="RightHoop"]
script = ExtResource("6_0xkil")

[node name="LeftHoop" parent="." instance=ExtResource("3_qflja")]
position = Vector2(-670, -270)
scale = Vector2(-1, 1)

[node name="Node2D" type="Node2D" parent="LeftHoop"]
script = ExtResource("7_m75r5")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_1p7u0")
format = 2
layer_0/tile_data = PackedInt32Array(65526, 393216, 1, 131062, 393216, 1, 196598, 393216, 1, 262134, 393216, 1, 327670, 393216, 1, 393206, 393216, 1, 458742, 393216, 1, 65527, 393216, 1, 131063, 393216, 1, 196599, 393216, 1, 262135, 393216, 1, 327671, 393216, 1, 393207, 393216, 1, 458743, 393216, 1, 65528, 393216, 1, 131064, 393216, 1, 196600, 393216, 1, 262136, 393216, 1, 327672, 393216, 1, 393208, 393216, 1, 458744, 393216, 1, 65529, 393216, 1, 131065, 393216, 1, 196601, 393216, 1, 262137, 393216, 1, 327673, 393216, 1, 393209, 393216, 1, 458745, 393216, 1, 65530, 393216, 1, 131066, 393216, 1, 196602, 393216, 1, 262138, 393216, 1, 327674, 393216, 1, 393210, 393216, 1, 458746, 393216, 1, 65531, 393216, 1, 131067, 393216, 1, 196603, 393216, 1, 262139, 393216, 1, 327675, 393216, 1, 393211, 393216, 1, 458747, 393216, 1, 65532, 393216, 1, 131068, 393216, 1, 196604, 393216, 1, 262140, 393216, 1, 327676, 393216, 1, 393212, 393216, 1, 458748, 393216, 1, 65533, 393216, 1, 131069, 393216, 1, 196605, 393216, 1, 262141, 393216, 1, 327677, 393216, 1, 393213, 393216, 1, 458749, 393216, 1, 65534, 393216, 1, 131070, 393216, 1, 196606, 393216, 1, 262142, 393216, 1, 327678, 393216, 1, 393214, 393216, 1, 458750, 393216, 1, 65535, 393216, 1, 131071, 393216, 1, 196607, 393216, 1, 262143, 393216, 1, 327679, 393216, 1, 393215, 393216, 1, 458751, 393216, 1, 0, 393216, 1, 65536, 393216, 1, 131072, 393216, 1, 196608, 393216, 1, 262144, 393216, 1, 327680, 393216, 1, 393216, 393216, 1, 1, 393216, 1, 65537, 393216, 1, 131073, 393216, 1, 196609, 393216, 1, 262145, 393216, 1, 327681, 393216, 1, 393217, 393216, 1, 2, 393216, 1, 65538, 393216, 1, 131074, 393216, 1, 196610, 393216, 1, 262146, 393216, 1, 327682, 393216, 1, 393218, 393216, 1, 3, 393216, 1, 65539, 393216, 1, 131075, 393216, 1, 196611, 393216, 1, 262147, 393216, 1, 327683, 393216, 1, 393219, 393216, 1, 4, 393216, 1, 65540, 393216, 1, 131076, 393216, 1, 196612, 393216, 1, 262148, 393216, 1, 327684, 393216, 1, 393220, 393216, 1, 5, 393216, 1, 65541, 393216, 1, 131077, 393216, 1, 196613, 393216, 1, 262149, 393216, 1, 327685, 393216, 1, 393221, 393216, 1, 6, 393216, 1, 65542, 393216, 1, 131078, 393216, 1, 196614, 393216, 1, 262150, 393216, 1, 327686, 393216, 1, 393222, 393216, 1, 7, 393216, 1, 65543, 393216, 1, 131079, 393216, 1, 196615, 393216, 1, 262151, 393216, 1, 327687, 393216, 1, 393223, 393216, 1, 8, 393216, 1, 65544, 393216, 1, 131080, 393216, 1, 196616, 393216, 1, 262152, 393216, 1, 327688, 393216, 1, 393224, 393216, 1, 9, 393216, 1, 65545, 393216, 1, 131081, 393216, 1, 196617, 393216, 1, 262153, 393216, 1, 327689, 393216, 1, 393225, 393216, 1, -786447, 393216, 1, -720911, 393216, 1, -655375, 393216, 1, -589839, 393216, 1, -524303, 393216, 1, -458767, 393216, 1, -393231, 393216, 1, -327695, 393216, 1, -262159, 393216, 1, -196623, 393216, 1, -131087, 393216, 1, -65551, 393216, 1, -15, 393216, 1, 65521, 393216, 1, 131057, 393216, 1, 196593, 393216, 1, 262129, 393216, 1, 327665, 393216, 1, 393201, 393216, 1, 458737, 393216, 1, -786446, 393216, 1, -720910, 393216, 1, -655374, 393216, 1, -589838, 393216, 1, -524302, 393216, 1, -458766, 393216, 1, -393230, 393216, 1, -327694, 393216, 1, -262158, 393216, 1, -196622, 393216, 1, -131086, 393216, 1, -65550, 393216, 1, -14, 393216, 1, 65522, 393216, 1, 131058, 393216, 1, 196594, 393216, 1, 262130, 393216, 1, 327666, 393216, 1, 393202, 393216, 1, 458738, 393216, 1, -786445, 393216, 1, -720909, 393216, 1, -655373, 393216, 1, -589837, 393216, 1, -524301, 393216, 1, -458765, 393216, 1, -393229, 393216, 1, -327693, 393216, 1, -262157, 393216, 1, -196621, 393216, 1, -131085, 393216, 1, -65549, 393216, 1, -13, 393216, 1, 65523, 393216, 1, 131059, 393216, 1, 196595, 393216, 1, 262131, 393216, 1, 327667, 393216, 1, 393203, 393216, 1, 458739, 393216, 1, -786444, 393216, 1, -720908, 393216, 1, -655372, 393216, 1, -589836, 393216, 1, -524300, 393216, 1, -458764, 393216, 1, -393228, 393216, 1, -327692, 393216, 1, -262156, 393216, 1, -196620, 393216, 1, -131084, 393216, 1, -65548, 393216, 1, -12, 393216, 1, 65524, 393216, 1, 131060, 393216, 1, 196596, 393216, 1, 262132, 393216, 1, 327668, 393216, 1, 393204, 393216, 1, 458740, 393216, 1, 65525, 393216, 1, 131061, 393216, 1, 196597, 393216, 1, 262133, 393216, 1, 327669, 393216, 1, 393205, 393216, 1, 458741, 393216, 1, 10, 393216, 1, 65546, 393216, 1, 131082, 393216, 1, 196618, 393216, 1, 262154, 393216, 1, 327690, 393216, 1, 393226, 393216, 1, -851957, 393216, 1, -786421, 393216, 1, -720885, 393216, 1, -655349, 393216, 1, -589813, 393216, 1, -524277, 393216, 1, -458741, 393216, 1, -393205, 393216, 1, -327669, 393216, 1, -262133, 393216, 1, -196597, 393216, 1, -131061, 393216, 1, -65525, 393216, 1, 11, 393216, 1, 65547, 393216, 1, 131083, 393216, 1, 196619, 393216, 1, 262155, 393216, 1, 327691, 393216, 1, 393227, 393216, 1, -851956, 393216, 1, -786420, 393216, 1, -720884, 393216, 1, -655348, 393216, 1, -589812, 393216, 1, -524276, 393216, 1, -458740, 393216, 1, -393204, 393216, 1, -327668, 393216, 1, -262132, 393216, 1, -196596, 393216, 1, -131060, 393216, 1, -65524, 393216, 1, 12, 393216, 1, 65548, 393216, 1, 131084, 393216, 1, 196620, 393216, 1, 262156, 393216, 1, 327692, 393216, 1, 393228, 393216, 1, -851955, 393216, 1, -786419, 393216, 1, -720883, 393216, 1, -655347, 393216, 1, -589811, 393216, 1, -524275, 393216, 1, -458739, 393216, 1, -393203, 393216, 1, -327667, 393216, 1, -262131, 393216, 1, -196595, 393216, 1, -131059, 393216, 1, -65523, 393216, 1, 13, 393216, 1, 65549, 393216, 1, 131085, 393216, 1, 196621, 393216, 1, 262157, 393216, 1, 327693, 393216, 1, 393229, 393216, 1, -851954, 393216, 1, -786418, 393216, 1, -720882, 393216, 1, -655346, 393216, 1, -589810, 393216, 1, -524274, 393216, 1, -458738, 393216, 1, -393202, 393216, 1, -327666, 393216, 1, -262130, 393216, 1, -196594, 393216, 1, -131058, 393216, 1, -65522, 393216, 1, 14, 393216, 1, 65550, 393216, 1, 131086, 393216, 1, 196622, 393216, 1, 262158, 393216, 1, 327694, 393216, 1, 393230, 393216, 1, -851953, 393216, 1, -786417, 393216, 1, -720881, 393216, 1, -655345, 393216, 1, -589809, 393216, 1, -524273, 393216, 1, -458737, 393216, 1, -393201, 393216, 1, -327665, 393216, 1, -262129, 393216, 1, -196593, 393216, 1, -131057, 393216, 1, -65521, 393216, 1, 15, 393216, 1, 65551, 393216, 1, 131087, 393216, 1, 196623, 393216, 1, 262159, 393216, 1, 327695, 393216, 1, 393231, 393216, 1, -1179663, 393216, 1, -1114127, 393216, 1, -1048591, 393216, 1, -983055, 393216, 1, -917519, 393216, 1, -851983, 393216, 1, -1179662, 393216, 1, -1114126, 393216, 1, -1048590, 393216, 1, -983054, 393216, 1, -917518, 393216, 1, -851982, 393216, 1, -1179661, 393216, 1, -1114125, 393216, 1, -1048589, 393216, 1, -983053, 393216, 1, -917517, 393216, 1, -851981, 393216, 1, -1179660, 393216, 1, -1114124, 393216, 1, -1048588, 393216, 1, -983052, 393216, 1, -917516, 393216, 1, -851980, 393216, 1, -1179659, 393216, 1, -1114123, 393216, 1, -1048587, 393216, 1, -983051, 393216, 1, -917515, 393216, 1, -851979, 393216, 1, -1179658, 393216, 1, -1114122, 393216, 1, -1048586, 393216, 1, -983050, 393216, 1, -917514, 393216, 1, -851978, 393216, 1, -1179657, 393216, 1, -1114121, 393216, 1, -1048585, 393216, 1, -983049, 393216, 1, -917513, 393216, 1, -851977, 393216, 1, -1179656, 393216, 1, -1114120, 393216, 1, -1048584, 393216, 1, -983048, 393216, 1, -917512, 393216, 1, -851976, 393216, 1, -1179655, 393216, 1, -1114119, 393216, 1, -1048583, 393216, 1, -983047, 393216, 1, -917511, 393216, 1, -851975, 393216, 1, -1179654, 393216, 1, -1114118, 393216, 1, -1048582, 393216, 1, -983046, 393216, 1, -917510, 393216, 1, -851974, 393216, 1, -1179653, 393216, 1, -1114117, 393216, 1, -1048581, 393216, 1, -983045, 393216, 1, -917509, 393216, 1, -851973, 393216, 1, -1179652, 393216, 1, -1114116, 393216, 1, -1048580, 393216, 1, -983044, 393216, 1, -917508, 393216, 1, -851972, 393216, 1, -1179651, 393216, 1, -1114115, 393216, 1, -1048579, 393216, 1, -983043, 393216, 1, -917507, 393216, 1, -851971, 393216, 1, -1179650, 393216, 1, -1114114, 393216, 1, -1048578, 393216, 1, -983042, 393216, 1, -917506, 393216, 1, -851970, 393216, 1, -1179649, 393216, 1, -1114113, 393216, 1, -1048577, 393216, 1, -983041, 393216, 1, -917505, 393216, 1, -851969, 393216, 1, -1245184, 393216, 1, -1179648, 393216, 1, -1114112, 393216, 1, -1048576, 393216, 1, -983040, 393216, 1, -917504, 393216, 1, -1245183, 393216, 1, -1179647, 393216, 1, -1114111, 393216, 1, -1048575, 393216, 1, -983039, 393216, 1, -917503, 393216, 1, -1245182, 393216, 1, -1179646, 393216, 1, -1114110, 393216, 1, -1048574, 393216, 1, -983038, 393216, 1, -917502, 393216, 1, -1245181, 393216, 1, -1179645, 393216, 1, -1114109, 393216, 1, -1048573, 393216, 1, -983037, 393216, 1, -917501, 393216, 1, -1245180, 393216, 1, -1179644, 393216, 1, -1114108, 393216, 1, -1048572, 393216, 1, -983036, 393216, 1, -917500, 393216, 1, -1245179, 393216, 1, -1179643, 393216, 1, -1114107, 393216, 1, -1048571, 393216, 1, -983035, 393216, 1, -917499, 393216, 1, -1245178, 393216, 1, -1179642, 393216, 1, -1114106, 393216, 1, -1048570, 393216, 1, -983034, 393216, 1, -917498, 393216, 1, -1245177, 393216, 1, -1179641, 393216, 1, -1114105, 393216, 1, -1048569, 393216, 1, -983033, 393216, 1, -917497, 393216, 1, -1245176, 393216, 1, -1179640, 393216, 1, -1114104, 393216, 1, -1048568, 393216, 1, -983032, 393216, 1, -917496, 393216, 1, -1245175, 393216, 1, -1179639, 393216, 1, -1114103, 393216, 1, -1048567, 393216, 1, -983031, 393216, 1, -917495, 393216, 1, -1245174, 393216, 1, -1179638, 393216, 1, -1114102, 393216, 1, -1048566, 393216, 1, -983030, 393216, 1, -917494, 393216, 1, -1245173, 393216, 1, -1179637, 393216, 1, -1114101, 393216, 1, -1048565, 393216, 1, -983029, 393216, 1, -917493, 393216, 1, -1245172, 393216, 1, -1179636, 393216, 1, -1114100, 393216, 1, -1048564, 393216, 1, -983028, 393216, 1, -917492, 393216, 1, -1245171, 393216, 1, -1179635, 393216, 1, -1114099, 393216, 1, -1048563, 393216, 1, -983027, 393216, 1, -917491, 393216, 1, -1245170, 393216, 1, -1179634, 393216, 1, -1114098, 393216, 1, -1048562, 393216, 1, -983026, 393216, 1, -917490, 393216, 1, -1245169, 393216, 1, -1179633, 393216, 1, -1114097, 393216, 1, -1048561, 393216, 1, -983025, 393216, 1, -917489, 393216, 1)

[node name="ScoreBoard" parent="." instance=ExtResource("6_q1x3o")]

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true
